13 - Resolve issues after rebasing, fix spacing

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -32,7 +32,7 @@
 
 
 footer {
-  //position: fixed;
+  position: fixed;
 	left: 0;
 	bottom: 0;
 	padding-left: 20px;
